[gd_scene load_steps=2 format=3 uid="uid://wmpvq2c53b5"]

[ext_resource type="Script" path="res://Scripts/Prefabs/UI/multiplayer_ui.gd" id="1_mibjp"]

[node name="Multiplayer UI" type="CanvasLayer"]
script = ExtResource("1_mibjp")

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
autostart = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Scoring" type="GridContainer" parent="Control"]
modulate = Color(1, 1, 1, 0.45098)
custom_minimum_size = Vector2(96, 96)
layout_mode = 1
offset_left = 94.0
offset_top = 109.0
offset_right = 222.0
offset_bottom = 765.0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Player" type="ColorRect" parent="Control/Scoring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
color = Color(0.43, 0.43, 0.43, 1)

[node name="Label" type="Label" parent="Control/Scoring/Player"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player1" type="ColorRect" parent="Control/Scoring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
color = Color(0.43, 0.43, 0.43, 1)

[node name="Label" type="Label" parent="Control/Scoring/Player1"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player2" type="ColorRect" parent="Control/Scoring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
color = Color(0.43, 0.43, 0.43, 1)

[node name="Label" type="Label" parent="Control/Scoring/Player2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player3" type="ColorRect" parent="Control/Scoring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
color = Color(0.43, 0.43, 0.43, 1)

[node name="Label" type="Label" parent="Control/Scoring/Player3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Player4" type="ColorRect" parent="Control/Scoring"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
color = Color(0.43, 0.43, 0.43, 1)

[node name="Label" type="Label" parent="Control/Scoring/Player4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Timer" to="." method="updateScores"]
